Single_AZ/create_igw.tf
## Internet Gateway


resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main_vpc.id

    tags = {
    Name = "igw"
    }
}
