Single_AZ/create_vpc.tf
## Create VPC


resource "aws_vpc" "main_vpc" {
    cidr_block       = "10.0.0.0/16"
    instance_tenancy = "default"

    tags = {
    Name = "main_vpc"
}
}
